master

- drop suport for Ruby 1.9.2, officially support 2.0

- `poet edit` re-generates files only when they are actually changed

0.6

- show original file where stanzas came from (thanks @sethiele)

- check for existence of ssh config file when bootstrapping (thanks @jayed)

0.5

- drop support for Ruby 1.8

- edit files under ~/.ssh/config.d/ directly with `poet edit some_ssh_config_file`

- use Thor internally for CLI

- 'bootstrap' is now a subcommand (use `poet bootstrap` instead of `poet --bootstrap`)

- also test against JRuby, Rubinius, and 1.9.2

- running verbosely works again

- extended help

0.4

- let users organize their config files in directories

0.3.1

- fix bootstrapping, opened ticket for Aruba
  (https://github.com/cucumber/aruba/issues/115)

0.3

- options: Use env var POET_OUTPUT in addition to --output and POET_GLOBDIR in addition to --dir

- bootstrapping support

0.2

- testing with Aruba

- new CLI options --output and --dir

- Dropped CLI option --only

0.0.1

- Initial release as gem