@@ -1,5 +1,7 @@
 master
 
+- list config files with `poet ls` or `poet ls --tree`
+
 - drop suport for Ruby 1.9.2, officially support 2.0
 
 - `poet edit` re-generates files only when they are actually changed
